--- a/respo/service-feign-dev.properties
+++ b/respo/service-feign-dev.properties
@@ -1,7 +1,4 @@
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
-server.port: 8769
-spring.application.name: service-zuul
-zuul.routes.api-a.path: /api-a/**
-zuul.routes.api-a.serviceId: service-ribbon
-zuul.routes.api-b.path: /api-b/**
-zuul.routes.api-b.serviceId: service-feign
+server.port: 8765
+spring.application.name: service-feign
+feign.hystrix.enabled: true
